// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ellipse dash props renders dashed props on a circle correctly: large dashed circle dash props 1`] = `
Object {
  "strokeDasharray": "16 17.333333333333332",
  "strokeDashoffset": "8",
}
`;

exports[`ellipse dash props renders dashed props on a circle correctly: large dashed ellipse dash props 1`] = `
Object {
  "strokeDasharray": "16 17.333333333333332",
  "strokeDashoffset": "8",
}
`;

exports[`ellipse dash props renders dashed props on a circle correctly: small dashed circle dash props 1`] = `
Object {
  "strokeDasharray": "8 8.666666666666666",
  "strokeDashoffset": "4",
}
`;

exports[`ellipse dash props renders dashed props on a circle correctly: small dashed ellipse dash props 1`] = `
Object {
  "strokeDasharray": "8 8.666666666666666",
  "strokeDashoffset": "4",
}
`;

exports[`ellipse dash props renders dotted props on a circle correctly: large dotted circle dash props 1`] = `
Object {
  "strokeDasharray": "2 14.666666666666666",
  "strokeDashoffset": "0",
}
`;

exports[`ellipse dash props renders dotted props on a circle correctly: large dotted ellipse dash props 1`] = `
Object {
  "strokeDasharray": "2 14.666666666666666",
  "strokeDashoffset": "0",
}
`;

exports[`ellipse dash props renders dotted props on a circle correctly: small dotted circle dash props 1`] = `
Object {
  "strokeDasharray": "1 7.333333333333333",
  "strokeDashoffset": "0",
}
`;

exports[`ellipse dash props renders dotted props on a circle correctly: small dotted ellipse dash props 1`] = `
Object {
  "strokeDasharray": "1 7.333333333333333",
  "strokeDashoffset": "0",
}
`;
